Mod: Changed width parameter of CSS to make it display as same look as among all browsers.

--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -58,7 +58,7 @@
                                 </f:facet>
                             </h:column>
                             <h:column id="column7">
-                                <h:panelGrid id="gridPanel2" style="max-width: 360px" styleClass="qPrint">
+                                <h:panelGrid id="gridPanel2"  styleClass="qPrintClassList">
                                     <h:outputText id="outputText13" value="#{currentRow.classList}"/>
                                 </h:panelGrid>
                                 <f:facet name="header">
