--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -45,40 +45,41 @@
         </h:form>
 
         <h:panelGrid columns="2" styleClass="body">
-            <h:panelGrid styleClass="leftpane" >
-                <h:form>
-                    <h:panelGrid style="width: 100%">
-                        <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpaneltext" value="キャラクター"/>                        
-                        </h:panelGrid>                     
-                        <h:outputLabel value=""/>
-                        <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:outputLabel styleClass="leftpaneltext" value="各種管理"/>
-                        </h:panelGrid> 
-                        <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="#{scenarioRecordController.prepareList()}" styleClass="leftpaneltextAdmin" value="シナリオ"/>
-                        </h:panelGrid>                           
-                        <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="/classMaster/ClassListPage" id="classListLink" styleClass="leftpaneltextAdmin" value="クラス"/>
-                        </h:panelGrid>
-                        <h:panelGrid id="raceListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="/raceMaster/RaceListPage" id="raceListLink" styleClass="leftpaneltextAdmin" value="種族"/>
-                        </h:panelGrid>       
+            <h:panelGrid id="topcontents" style="width: 100%" styleClass="contents" columns="2">
+                <h:panelGrid styleClass="leftpane" >
+                    <h:form>
+                        <h:panelGrid style="width: 100%">
+                            <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpaneltext" value="キャラクター"/>                        
+                            </h:panelGrid>                     
+                            <h:outputLabel value=""/>
+                            <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:outputLabel styleClass="leftpaneltext" value="各種管理"/>
+                            </h:panelGrid> 
+                            <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="#{scenarioRecordController.prepareList()}" styleClass="leftpaneltextAdmin" value="シナリオ"/>
+                            </h:panelGrid>                           
+                            <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="/classMaster/ClassListPage" id="classListLink" styleClass="leftpaneltextAdmin" value="クラス"/>
+                            </h:panelGrid>
+                            <h:panelGrid id="raceListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="/raceMaster/RaceListPage" id="raceListLink" styleClass="leftpaneltextAdmin" value="種族"/>
+                            </h:panelGrid>       
 
-                        <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="/monsterMaster/List" styleClass="leftpaneltextAdmin" value="モンスター"/>
-                        </h:panelGrid>  
-                    </h:panelGrid>                
-                </h:form>                    
-            </h:panelGrid>  
-            <h:panelGrid styleClass="rightpane">
-                <h:panelGrid id="topcontents" style="width: 100%" styleClass="contents">
+                            <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="/monsterMaster/List" styleClass="leftpaneltextAdmin" value="モンスター"/>
+                            </h:panelGrid>  
+                        </h:panelGrid>                
+                    </h:form>                    
+                </h:panelGrid>  
+                <h:panelGrid styleClass="rightpane">
                     <h:panelGroup layout="block">
                         <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                     </h:panelGroup> 
                     <ui:insert name="body">Default Body</ui:insert>
                 </h:panelGrid>
             </h:panelGrid>
+
         </h:panelGrid>
 
         <h:form>
