--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -12,7 +12,7 @@
         </ui:define>
         <ui:define name="body">
             <h:form id="form1"> 
-                <h:panelGrid id="contentsGrid" style="width: 100%">
+                <h:panelGrid id="contentsGrid" style="width: 100%" >
                     <h:panelGrid columns="2" id="campFilterGridPanel" style="width: 100%; height: 100%;">
                         <h:panelGrid columns="2">
                             <h:outputLabel value="キャンペーン"/>
@@ -24,6 +24,11 @@
                             <h:commandButton action="#{characterSheetController.newCharaButton_action}" id="newCharaButton" style="font-size: 12px" value="新キャラクター作成"/>
                         </h:panelGrid>
                     </h:panelGrid>
+                    <h:panelGroup rendered="#{scenarioCharacterRecordController.items.rowCount > 0}">
+                        <h:outputText value="#{characterSheetController.pagination.pageFirstItem + 1}..#{characterSheetController.pagination.pageLastItem + 1}/#{characterSheetController.pagination.itemsCount}"/>&nbsp;
+                        <h:commandLink action="#{characterSheetController.previous}" value="#{bundle.Previous} #{characterSheetController.pagination.pageSize}" rendered="#{characterSheetController.pagination.hasPreviousPage}"/>&nbsp;
+                        <h:commandLink action="#{characterSheetController.next}" value="#{bundle.Next} #{characterSheetController.pagination.pageSize}" rendered="#{characterSheetController.pagination.hasNextPage}"/>&nbsp;
+                        
                     <h:panelGrid id="charaListGridPanel" style="width: 100%; height: 100%;" styleClass="tableGrid">
                         <h:dataTable binding="#{characterSheetController.characterListDataTable}"
                                      id="characterListDataTable" style="" styleClass="w" value="#{characterSheetController.characterDataList}" var="currentRow">
@@ -94,7 +99,8 @@
                         </h:commandLink> 
                         <h:commandButton action="#{characterSheetController.selectAllButton_action}" id="selectAllButton" value="全て選択"/>
                         <h:commandButton action="#{characterSheetController.releaseAllButton_action}" id="releaseAllButton" value="全て解除"/>
-                    </h:panelGrid>    
+                    </h:panelGrid> 
+                    </h:panelGroup>
                 </h:panelGrid>
             </h:form>
         </ui:define>            
