--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="キャラクターリスト"></h:outputText>
+            <h:outputText value="キャラクター一覧"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form id="form1"> 
