--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,7 +28,11 @@
             </h:form>
         </p>
 
-    </h:body>
+                    <h:form>
+                    <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
+                </h:form>
+</h:body>
+
 
 
 </html>
