--- a/web/campaignMaster/Edit.xhtml
+++ b/web/campaignMaster/Edit.xhtml
@@ -7,30 +7,23 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.EditCampaignMasterTitle}"></h:outputText>
+            <h:outputText value="キャンペーンの編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
+  
             <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditCampaignMasterLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{campaignMasterController.selected.id}" title="#{bundle.EditCampaignMasterTitle_id}" required="true" requiredMessage="#{bundle.EditCampaignMasterRequiredMessage_id}"/>
-                    <h:outputLabel value="#{bundle.EditCampaignMasterLabel_campaignName}" for="campaignName" />
+                <h:commandButton action="#{campaignMasterController.update}" value="保存"/>                
+                <br/>
+                <h:panelGrid columns="2" style="width: 400">
+                    <h:outputLabel value="キャンペーン名" for="campaignName" />
                     <h:inputText id="campaignName" value="#{campaignMasterController.selected.campaignName}" title="#{bundle.EditCampaignMasterTitle_campaignName}" />
-                    <h:outputLabel value="#{bundle.EditCampaignMasterLabel_master}" for="master" />
+                    <h:outputLabel value="マスター" for="master" />
                     <h:inputText id="master" value="#{campaignMasterController.selected.master}" title="#{bundle.EditCampaignMasterTitle_master}" />
                 </h:panelGrid>
-                <h:commandLink action="#{campaignMasterController.update}" value="#{bundle.EditCampaignMasterSaveLink}"/>
-                <br />
-                <br />
-                <h:commandLink action="View" value="#{bundle.EditCampaignMasterViewLink}" immediate="true"/>
-                <br />
-                <h:commandLink action="#{campaignMasterController.prepareList}" value="#{bundle.EditCampaignMasterShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:commandLink value="#{bundle.EditCampaignMasterIndexLink}" action="/index" immediate="true" />
+
+                <h:panelGrid id="deleteCharaGridPanel1" style="height: 100%; text-align: right; width: 100%">
+                    <h:commandButton action="#{campaignMasterController.destroy}" value="削除" style="color: rgb(255, 51, 51)" onclick="return confirm('削除しますか?')"/>                                    
+                </h:panelGrid>                
             </h:form>
         </ui:define>
     </ui:composition>
