--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -52,13 +52,17 @@
                             <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
                                 <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpaneltext" value="キャラクター"/>                        
                             </h:panelGrid>                     
+                            <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="/campaignMaster/List" styleClass="leftpaneltext" value="キャンペーン"/>
+                            </h:panelGrid>  
+                            <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                                <h:commandLink action="#{scenarioRecordController.prepareList()}" styleClass="leftpaneltext" value="シナリオ"/>
+                            </h:panelGrid>                                
                             <h:outputLabel value=""/>
                             <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                                <h:outputLabel styleClass="leftpaneltext" value="各種管理"/>
+                                <h:outputLabel styleClass="leftpaneltext" value="データ管理"/>
                             </h:panelGrid> 
-                            <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                                <h:commandLink action="#{scenarioRecordController.prepareList()}" styleClass="leftpaneltextAdmin" value="シナリオ"/>
-                            </h:panelGrid>                           
+
                             <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
                                 <h:commandLink action="/classMaster/ClassListPage" id="classListLink" styleClass="leftpaneltextAdmin" value="クラス"/>
                             </h:panelGrid>
