Mod: Made Moster admin page need login, but currently, username and password is displayed at login page.

--- a/web/login/LoginPage.xhtml
+++ b/web/login/LoginPage.xhtml
@@ -16,6 +16,7 @@
                     <h:panelGrid id="paddingPanel1" style="height: 20px; width: 100%">
 
                     </h:panelGrid>
+                    <h:outputLabel style="color: green" value="admin/admin でログインしてください。 (現在アカウントでの制限は行なっていません)"/>                    
                     <h:panelGrid  cellpadding="5" columns="2" id="dataGrid1" style="width: 100%; height: 100%;">
                         <h:outputLabel id="label1" value="ユーザー名:"/>
                         <h:inputText value="#{loginController.userName}" id="usernameTextField" />
