--- a/web/campaignMaster/Edit.xhtml
+++ b/web/campaignMaster/Edit.xhtml
@@ -12,7 +12,12 @@
         <ui:define name="body">
   
             <h:form>
-                <h:commandButton action="#{campaignMasterController.update}" value="保存"/>                
+                <h:panelGrid style="width: 100%" columns="2">
+                    <h:commandButton action="#{campaignMasterController.update}" value="保存"/>                
+                    <h:panelGrid style="text-align: right; width: 100%" >
+                        <h:commandButton action="/campaignMaster/List" value="キャンセル"/>                                        
+                    </h:panelGrid>
+                </h:panelGrid>
                 <br/>
                 <h:panelGrid columns="2" style="width: 400">
                     <h:outputLabel value="キャンペーン名" for="campaignName" />
