Mod: Change Button to Link

--- a/web/campaignMaster/List.xhtml
+++ b/web/campaignMaster/List.xhtml
@@ -14,7 +14,7 @@
                 
                <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
                     <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
-                        <h:commandButton action="#{campaignMasterController.prepareCreate}" value="新規キャンペーンの作成"/>
+                        <h:commandLink action="#{campaignMasterController.prepareCreate}" value="新規キャンペーンの作成"/>
                     </h:panelGrid>
                 </h:panelGrid>
                 
