--- a/web/classMaster/ClassListPage.xhtml
+++ b/web/classMaster/ClassListPage.xhtml
@@ -15,7 +15,7 @@
             <h:form>
                     <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
                         <h:panelGrid id="gridPanel2" style="height: 100%; text-align: right; width: 100%">
-                            <h:commandButton action="#{classMasterController.newClassButton_action}" id="newClassButton" value="新規クラス作成"/>
+                            <h:commandLink action="#{classMasterController.newClassButton_action}" id="newClassButton" value="新規クラス作成"/>
                         </h:panelGrid>
                     </h:panelGrid>
                     <h:panelGrid id="tableGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
