Mod: Change Button to Link

--- a/web/raceMaster/RaceListPage.xhtml
+++ b/web/raceMaster/RaceListPage.xhtml
@@ -13,7 +13,7 @@
             <h:form>
                 <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
                     <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
-                        <h:commandList action="#{raceMasterController.newRaceButton_action}" id="newRaceButton" value="新しい種族作成"/>
+                        <h:commandLink action="#{raceMasterController.newRaceButton_action}" id="newRaceButton" value="新しい種族作成"/>
                     </h:panelGrid>
                 </h:panelGrid>
                 <h:panelGrid id="contentsGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
