--- a/web/monsterMaster/List.xhtml
+++ b/web/monsterMaster/List.xhtml
@@ -12,7 +12,7 @@
         <ui:define name="body">
             <h:form>
                 <h:panelGrid style="width: 100%; text-align: right">
-                    <h:commandButton action="#{monsterMasterController.prepareCreate}" value="新モンスター登録"/>
+                    <h:commandLink action="#{monsterMasterController.prepareCreate}" value="新モンスター登録"/>
                 </h:panelGrid>
 
                 <h:outputText escape="false" value="モンスターは登録されていません。" rendered="#{monsterMasterController.items.rowCount == 0}"/>
