--- a/web/encounterRecord/Create.xhtml
+++ b/web/encounterRecord/Create.xhtml
@@ -7,31 +7,29 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateEncounterRecordTitle}"></h:outputText>
+            <h:outputText value="エンカウンターの作成"></h:outputText>
         </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateEncounterRecordLabel_name}" for="name" />
-                    <h:inputText id="name" value="#{encounterRecordController.selected.name}" title="#{bundle.CreateEncounterRecordTitle_name}" />
-                                        
-                    <h:outputLabel value="#{bundle.CreateEncounterRecordLabel_comments}" for="comments" />
-                    <h:inputText id="comments" value="#{encounterRecordController.selected.comments}" title="#{bundle.CreateEncounterRecordTitle_comments}" />
-                    <h:outputLabel value="#{bundle.CreateEncounterRecordLabel_round}" for="round" />
-                    <h:inputText id="round" value="#{encounterRecordController.selected.round}" title="#{bundle.CreateEncounterRecordTitle_round}" />
+       <ui:define name="body">
+            <h:form>          
+                <h:panelGrid style="width: 100%" columns="2">
+                    <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="作成" styleClass="smallBold"/>                      
+                    <h:panelGrid style="text-align: right; width: 100%" >
+                        <h:commandButton action="/scenarioRecord/Edit" value="キャンセル"/>                                        
+                    </h:panelGrid>
+                </h:panelGrid>  
+                
+                <h:panelGrid columns="3">
+                    <h:outputLabel value="エンカウンター名: " for="name" />
+                    <h:inputText id="name" value="#{encounterRecordController.selected.name}" title="#{bundle.EditEncounterRecordTitle_name}" />
+                </h:panelGrid> 
+
+                <h:panelGrid columns="2"> 
+                    <h:outputLabel value="メモ " for="description" />
+                    <h:inputTextarea id="comments" styleClass="middleTextArea" value="#{encounterRecordController.selected.comments}" />
                 </h:panelGrid>
                 <br />
-                <h:commandButton action="#{encounterRecordController.create}" value="#{bundle.CreateEncounterRecordSaveLink}" />
+                <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオ『#{scenarioRecordController.selected.name}』の編集に戻る"/>
                 <br />
-                <br />
-                <h:commandLink action="#{encounterRecordController.prepareList}" value="#{bundle.CreateEncounterRecordShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:commandLink value="#{bundle.CreateEncounterRecordIndexLink}" action="/index" immediate="true" />
-
             </h:form>
         </ui:define>
     </ui:composition>
