--- a/web/scenarioRecord/Create.xhtml
+++ b/web/scenarioRecord/Create.xhtml
@@ -7,31 +7,44 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateScenarioRecordTitle}"></h:outputText>
+            <h:outputText value="新規シナリオの作成"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
+                <h:panelGrid style="width: 100%" columns="2">
+                    <h:commandButton action="#{scenarioRecordController.create}" value="作成"/>                
+                    <h:panelGrid style="text-align: right; width: 100%" >
+                        <h:commandButton action="/scenarioRecord/List" value="キャンセル"/>                                        
+                    </h:panelGrid>
+                </h:panelGrid>                
+                
                 <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateScenarioRecordLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{scenarioRecordController.selected.id}" title="#{bundle.CreateScenarioRecordTitle_id}" required="true" requiredMessage="#{bundle.CreateScenarioRecordRequiredMessage_id}"/>
-                    <h:outputLabel value="#{bundle.CreateScenarioRecordLabel_name}" for="name" />
-                    <h:inputText id="name" value="#{scenarioRecordController.selected.name}" title="#{bundle.CreateScenarioRecordTitle_name}" />
-                    <h:outputLabel value="#{bundle.CreateScenarioRecordLabel_description}" for="description" />
-                    <h:inputText id="description" value="#{scenarioRecordController.selected.description}" title="#{bundle.CreateScenarioRecordTitle_description}" />
-                    <h:outputLabel value="#{bundle.CreateScenarioRecordLabel_campaign}" for="campaign" />
-                    <h:selectOneMenu id="campaign" value="#{scenarioRecordController.selected.campaign}" title="#{bundle.CreateScenarioRecordTitle_campaign}" >
+                    <h:outputLabel value="キャンペーン" for="campaign" />
+                    <h:selectOneMenu id="campaign" value="#{scenarioRecordController.selected.campaign}" title="#{bundle.EditScenarioRecordTitle_campaign}" >
                         <f:selectItems value="#{campaignMasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
+                    <h:outputLabel value="シナリオ名" for="name" />
+                    <h:inputText id="name" value="#{scenarioRecordController.selected.name}" title="#{bundle.EditScenarioRecordTitle_name}" />
+                    <h:outputLabel value="備考" for="description" />
+                    <h:inputTextarea id="description" styleClass="middleTextArea" value="#{scenarioRecordController.selected.description}" />
+
                 </h:panelGrid>
                 <br />
-                <h:commandLink action="#{scenarioRecordController.create}" value="#{bundle.CreateScenarioRecordSaveLink}" />
-                <br />
-                <br />
-                <h:commandLink action="#{scenarioRecordController.prepareList}" value="#{bundle.CreateScenarioRecordShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:commandLink value="#{bundle.CreateScenarioRecordIndexLink}" action="/index" immediate="true" />
             </h:form>
+
+            <hr/>
+
+            <br/>
+            <h:form>
+                <br/>
+                <h:outputLabel styleClass="smallBold">新しいエンカウンターの追加</h:outputLabel>
+                <h:panelGrid columns="3">
+                    <h:outputLabel value="名前" for="name" />
+                    <h:inputText id="name" style="width: 200px;" value="#{encounterRecordController.selected.name}" />
+                    <h:commandButton action="#{encounterRecordController.create}" value="作成" />                    
+                </h:panelGrid>
+            </h:form>
+
         </ui:define>
     </ui:composition>
 
