--- a/web/scenarioRecord/List.xhtml
+++ b/web/scenarioRecord/List.xhtml
@@ -14,35 +14,37 @@
                 <h:panelGrid id="gridPanel2" style="text-align: right; width: 100%">
                     <h:commandLink action="#{scenarioRecordController.prepareCreate}" value="新規シナリオを作成"/>
                 </h:panelGrid>
+                <h:panelGrid style="width: 600px">
 
-                <h:outputText escape="false" value="シナリオが有りません" rendered="#{scenarioRecordController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{scenarioRecordController.items.rowCount > 0}">
-                    <h:outputText value="#{scenarioRecordController.pagination.pageFirstItem + 1}..#{scenarioRecordController.pagination.pageLastItem + 1}/#{scenarioRecordController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{scenarioRecordController.previous}" value="#{bundle.Previous} #{scenarioRecordController.pagination.pageSize}" rendered="#{scenarioRecordController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{scenarioRecordController.next}" value="#{bundle.Next} #{scenarioRecordController.pagination.pageSize}" rendered="#{scenarioRecordController.pagination.hasNextPage}"/>&nbsp;
-                    <h:panelGrid styleClass="tableGrid">
-                        <h:dataTable value="#{scenarioRecordController.items}" var="item" rules="all" styleClass="w" >
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="シナリオ"/>
-                                </f:facet>
-                                <h:commandLink action="#{scenarioRecordController.prepareEdit}" value="#{item.name}"/>
-                            </h:column>
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="キャンペーン"/>
-                                </f:facet>
-                                <h:outputText value="#{item.campaign.campaignName}"/>
-                            </h:column>
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="備考"/>
-                                </f:facet>
-                                <h:outputText value="#{item.description}"/>
-                            </h:column>
-                        </h:dataTable>
-                    </h:panelGrid>                    
-                </h:panelGroup>
+                    <h:outputText escape="false" value="シナリオが有りません" rendered="#{scenarioRecordController.items.rowCount == 0}"/>
+                    <h:panelGroup rendered="#{scenarioRecordController.items.rowCount > 0}">
+                        <h:outputText value="#{scenarioRecordController.pagination.pageFirstItem + 1}..#{scenarioRecordController.pagination.pageLastItem + 1}/#{scenarioRecordController.pagination.itemsCount}"/>&nbsp;
+                        <h:commandLink action="#{scenarioRecordController.previous}" value="#{bundle.Previous} #{scenarioRecordController.pagination.pageSize}" rendered="#{scenarioRecordController.pagination.hasPreviousPage}"/>&nbsp;
+                        <h:commandLink action="#{scenarioRecordController.next}" value="#{bundle.Next} #{scenarioRecordController.pagination.pageSize}" rendered="#{scenarioRecordController.pagination.hasNextPage}"/>&nbsp;
+                        <h:panelGrid styleClass="tableGrid">
+                            <h:dataTable value="#{scenarioRecordController.items}" var="item" rules="all" styleClass="w" >
+                                <h:column>
+                                    <f:facet name="header">
+                                        <h:outputText value="シナリオ"/>
+                                    </f:facet>
+                                    <h:commandLink action="#{scenarioRecordController.prepareEdit}" value="#{item.name}"/>
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">
+                                        <h:outputText value="キャンペーン"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item.campaign.campaignName}"/>
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">
+                                        <h:outputText value="備考"/>
+                                    </f:facet>
+                                    <h:outputText value="#{item.description}"/>
+                                </h:column>
+                            </h:dataTable>
+                        </h:panelGrid>                    
+                    </h:panelGroup>
+                </h:panelGrid>                
             </h:form>
             <br/>
 
