--- a/web/monsterMaster/Create.xhtml
+++ b/web/monsterMaster/Create.xhtml
@@ -9,12 +9,15 @@
         <ui:define name="title">
             <h:outputText value="モンスターの作成"></h:outputText>
         </ui:define>
-        <ui:define name="control">
-                <br />
-                <h:commandButton action="#{monsterMasterController.create}" value="作成" />
-                <br />
-                <br />
-                <h:commandLink action="#{monsterMasterController.prepareList}" value="モンスター一覧" immediate="true"/>
+        <ui:define name="controlTop">
+            <h:panelGrid columns="2" style="width: 100%">
+                <h:panelGrid style="text-align: left;width: 100%">
+                    <h:commandButton action="#{monsterMasterController.create}" value="作成" />
+                </h:panelGrid>               
+               <h:panelGrid id="gridPanel3" style="height: 100%; text-align: right; width: 100%">
+                    <h:commandButton action="/monsterMaster/List" id="cancelButton" value="キャンセル" immediate="true"/>
+                </h:panelGrid>                 
+            </h:panelGrid>
         </ui:define>
     </ui:composition>
 
