--- a/web/characterSheet/EditCharacterPerLevelPage.xhtml
+++ b/web/characterSheet/EditCharacterPerLevelPage.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="キャラクター・シートのレベル毎の編集"></h:outputText>
+            <h:outputText value="キャラクター『#{characterSheetController.characterData.characterRecord.characterName}』のレベル毎の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
