--- a/web/campaignMaster/Edit.xhtml
+++ b/web/campaignMaster/Edit.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="キャンペーンの編集"></h:outputText>
+            <h:outputText value="キャンペーン『#{campaignMasterController.selected.campaignName}』の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
   
