Mod: Show character name to title

--- a/web/classMaster/EditClassPage.xhtml
+++ b/web/classMaster/EditClassPage.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="クラス編集"></h:outputText>
+            <h:outputText value="クラス『#{classMasterController.classMaster.className}』の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
