--- a/web/raceMaster/EditRacePage.xhtml
+++ b/web/raceMaster/EditRacePage.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="種族編集"></h:outputText>
+            <h:outputText value="種族『#{raceMasterController.raceMaster.raceName}』の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
