Mod: Show character name to title

--- a/web/monsterMaster/Edit.xhtml
+++ b/web/monsterMaster/Edit.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/monsterMaster/Edit_template.xhtml">
         <ui:define name="title">
-            <h:outputText value="モンスターの編集"></h:outputText>
+            <h:outputText value="モンスター『#{monsterMasterController.selected.name}』の編集"></h:outputText>
         </ui:define>
 
         <ui:define name="controlTop">
