--- a/web/campaignMaster/Create.xhtml
+++ b/web/campaignMaster/Create.xhtml
@@ -5,28 +5,21 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/campaignMaster/EditTemplate.xhtml">
+
         <ui:define name="title">
             <h:outputText value="新規キャンペーンの作成"></h:outputText>
         </ui:define>
-        <ui:define name="body">
-  
-            <h:form>
+        
+        <ui:define name="controlTop">
                 <h:panelGrid style="width: 100%" columns="2">
                     <h:commandButton action="#{campaignMasterController.create}" value="作成"/>                
                     <h:panelGrid style="text-align: right; width: 100%" >
                         <h:commandButton action="/campaignMaster/List" value="キャンセル"/>                                        
                     </h:panelGrid>
                 </h:panelGrid>
-                <br/>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="キャンペーン名" for="campaignName" />
-                    <h:inputText id="campaignName" value="#{campaignMasterController.selected.campaignName}" title="#{bundle.EditCampaignMasterTitle_campaignName}" />
-                    <h:outputLabel value="マスター" for="master" />
-                    <h:inputText id="master" value="#{campaignMasterController.selected.master}" title="#{bundle.EditCampaignMasterTitle_master}" />
-                </h:panelGrid>
-            </h:form>
         </ui:define>
+
     </ui:composition>
 
 </html>
