--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -16,7 +16,7 @@
                     <h:panelGrid columns="2" id="campFilterGridPanel" style="width: 100%; height: 100%;">
                         <h:panelGrid columns="2">
                             <h:outputLabel value="キャンペーン"/>
-                            <h:selectOneMenu id="dropdown1" onchange="submit()" style="width: 240px" value="#{characterSheetController.characterListSelectedCampaign}" >
+                            <h:selectOneMenu id="dropdown1" onchange="submit()" style="width: 240px" value="#{characterSheetController.selectedCampaign}" >
                                 <f:selectItems id="dropdown1SelectItems" value="#{applicationController.campaignArray}"/>
                             </h:selectOneMenu>
                         </h:panelGrid>                            
