--- a/web/characterSheet/EditCharacterRecordPage.xhtml
+++ b/web/characterSheet/EditCharacterRecordPage.xhtml
@@ -39,7 +39,7 @@
                             <h:panelGrid columns="4" id="gridPanel6" style="text-align: center; width: 100%" styleClass="g">
                                 <h:inputText id="textField1" onchange="" requiredMessage="キャラクター名を入力して下さい" style="width: 180px" value="#{characterSheetController.characterData.characterName}"/>
                                 <h:inputText id="textField2" onchange="" requiredMessage="プレイヤー名を入力して下さい" style="width: 181px" value="#{characterSheetController.characterData.playerName}"/>
-                                <h:selectOneMenu id="dropdown1" onchange="" requiredMessage="キャンペーンを選択して下さい" value="#{characterSheetController.selectedCampaign}">
+                                <h:selectOneMenu id="dropdown1" onchange="" requiredMessage="キャンペーンを選択して下さい" value="#{characterSheetController.campaign}">
                                     <f:selectItems id="dropdown1SelectItems1" value="#{applicationController.campaignArray}"/>
                                 </h:selectOneMenu>
                             </h:panelGrid>
